# Praksa-cpp

./: .gitignore  README.md
zadatak1/: .main.cpp.swp  README.md  main.cpp
zadatak2/: README.md
zadatak2/include/Professor/: Professor.h
zadatak2/src/: Professor.cpp  Student.cpp  main.cpp
zadatak3/include/Professor/: Professor.h
zadatak3/include/Student/: Student.h
zadatak3/src/: .main.cpp.swp  Professor.cpp  Student.cpp  main.cpp
zadatak3test/include/Professor/: Professor.h
zadatak3test/include/Student/: Student.h
zadatak3test/src/: Professor.cpp  Student.cpp  main.cpp
zadatak4/: .CMakeLists.txt.swp  CMakeLists.txt
zadatak5/: CMakeLists.txt  history.txt
zadatak5/include/Professor/: Professor.h
zadatak5/include/Student/: Student.h
zadatak5/src/: Professor.cpp  Student.cpp  main.cpp
zadatak5test/include/Professor/: Professor.h
zadatak5test/include/Student/: Student.h
zadatak5test/src/: Professor.cpp  Student.cpp  main.cpp
zadatak6/: CMakeLists.txt  ž
zadatak6/lib/: CMakeLists.txt
zadatak6/src/: Professor.cpp  Student.cpp  main.cpp
zadatak7/: CMakeLists.txt
zadatak7/Professor/: CMakeLists.txt
zadatak7/Professor/src/: Professor.cpp
zadatak7/Student/: CMakeLists.txt
zadatak7/Student/src/: Student.cpp
